# katas_and_patterns

./: .clang-format  02_open_closed.h  05_dependency_inversion.h  CMakeLists.txt  battleship_field_validator.h  center_of_attention.h  composite_pattern.h  condition_variable_test01.h  condition_variable_test02.h  count_duplicates.h  equal_sides_of_an_array.h  fibonacci_tribonacci_and_friends.h  functional_factory.h  futures_and_promises.h  main.cpp  n_linear.h  rainfall.h  simple_builder.h.h  simple_encryption_1.h  simple_factory.h  sort_the_inner_content.h  sort_the_odd.h  tank_truck.h  tortoise_race.h  twice_linear.h
